# Cpp-Flake-Template

./: .gitignore  README.md  flake.nix
project/: CMakeLists.txt
